dark mode font solved

--- a/css/localhost/themes/dark/default.css
+++ b/css/localhost/themes/dark/default.css
@@ -1,4 +1,4 @@
-@import url("https://fonts.googleapis.com/css2?family=Public+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=VT323&display=swap");
+/* @import url("https://fonts.googleapis.com/css2?family=Public+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=VT323&display=swap"); */
 
 :root {
   /* For Buttons, Inputs & Hyperlinks */
@@ -14,5 +14,5 @@
   --container-color: #121212 !important;
 
   /*Font Family */
-  --font-family: "Public Sans", sans-serif !important;
+  /* --font-family: "Public Sans", sans-serif !important; */
 }
